--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html>
 <head>
     <title>Calculate Area</title>
-    <script src="scripts/nonexistentfile.js"></script>
-    <link rel="stylesheet" href="styles/nonexistentstyle.css">
+    <script src="calculate.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Calculate Circle Area</h1>
-    <input type="number" id="radius" placeholder="Enter radius>
+    <input type="number" id="radius" placeholder="Enter radius">
     <button id="calculateBtn">Calculate</button>
     <button id="resetBtn">Reset</button>
     <p id="result"></p>
-
-    <script src="scripts/calculate.js"></script
 </body>
 </html>
